# supermercado

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  circle.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
data/: ellada.geojson
supermercado/: __init__.py  burntiles.py  edge_finder.py  grow_tiles.py  super_utils.py  tile_density.py  uniontiles.py
supermercado/scripts/: __init__.py  cli.py
tests/: test_cli.py  test_mod.py
tests/expected/: burned.txt  burned_range.txt  edges.txt  union.txt  unioned.txt
tests/fixtures/: edges.txt  shape.geojson  tiles.txt  union.txt
