[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supermercado"
version = "0.4.0"
description = "Supercharged mercantile"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mapbox Raster", email = "raster@mapbox.com" }]
license = { file = "LICENSE" }
dependencies = [
  "affine",
  "click",
  "click-plugins",
  "cligj",
  "mercantile",
  "numpy",
  "rasterio"
]
keywords = ["mapbox", "mercantile", "tiles"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: GIS"
]

[project.urls]
Homepage = "https://github.com/mapbox/supermercado"
Source = "https://github.com/mapbox/supermercado"

[project.scripts]
supermercado = "supermercado.scripts.cli:cli"

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-cov"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[dependency-groups]
dev = [
  "pre-commit",
  "pytest>=8.2.0",
  "pytest-cov",
  "ruff==0.5.4"
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["supermercado", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501", "E712", "F401" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Sequences of Features, not FeatureCollections, will be the default in version 1.0.0:FutureWarning",
  "ignore:Mercantile 2.0 will require tile x and y to be within the range .*:FutureWarning",
]
